[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Calum Mackenzie-Chambers <calum@mackenzie-chambers.co.uk>"]
description = "Advent of code rust template"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pico-args = "0.5.0"
